# ProxyGate

./: .gitignore  README.md  package-lock.json  package.json
.cursor/rules/: proxygate-cursor-prompt.md  proxygate-jellyfin-optimizations.mdc  proxygate.mdc
.github/workflows/: release.yml
src/: App.tsx  main.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  proxy.rs  tls_manager.rs
src-tauri/src/commands/: config.rs  health.rs  logs.rs  mod.rs  proxy.rs  tls.rs
src-tauri/src/db/: schema.sql
src-tauri/src/db/migrations/: 001_initial.sql  002_add_preset.sql
src/components/layout/: AppShell.tsx  Sidebar.tsx  Topbar.tsx
src/components/ui/: Badge.tsx  Button.tsx  HealthDot.tsx  Modal.tsx  Toaster.tsx  Toggle.tsx  UpstreamRow.tsx
src/lib/: cloudflareIPs.ts  configGen.ts  db.ts  tauri.ts  types.ts  validation.ts
src/pages/: DNS.tsx  Dashboard.tsx  Logs.tsx  Middleware.tsx  Routes.tsx  ServiceGroups.tsx  Settings.tsx  TLS.tsx
src/store/: useLogStore.ts  useMiddlewareStore.ts  useRouteStore.ts  useServiceGroupStore.ts  useSettingsStore.ts  useTLSStore.ts  useToastStore.ts
src/styles/: globals.css
