[package]
name = "proxygate"
version = "0.1.1"
description = "ProxyGate — Desktop Reverse Proxy Manager"
authors = ["ProxyGate"]
edition = "2021"

[lib]
name = "proxygate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2.3.2", features = ["sqlite"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
http = "1"
tokio-tungstenite = "0.26"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }

