[package]
name = "proxygate"
version = "0.2.0"
description = "ProxyGate — Desktop Reverse Proxy Manager"
authors = ["ProxyGate"]
edition = "2021"

[lib]
name = "proxygate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2.3.2", features = ["sqlite"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
http = "1"
tokio-tungstenite = "0.26"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }

# TLS / HTTPS support
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
instant-acme = "0.7"
rcgen = "0.13"
x509-parser = "0.16"

# Low-level HTTP serving for the TLS accept loop
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tower = "0.4"

